wwwroot/css/site.css
:root {
    --primary-accent: #00a8a0;
    --btn-primary: #2fa76b;
    --btn-hover: #69c798;
    --primary-dark: #1e293b;
    --primary-light: #f0f4f8;
    --text-color: #334155;
    --border-color: #cbd5e1;
    --max-width: 1800px;
    --form-bg: #f8fafc;
    --tw-bg-opacity: 1;
    --header-bg: rgba(214, 219, 220, 0.9);
    --header-text: #221616;
}

html {
    font-size: 14px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    line-height: 1.6;
    letter-spacing: 0.01em;
    position: relative;
    min-height: 100%;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.form-floating > .form-control-plaintext::placeholder,
.form-floating > .form-control::placeholder {
    color: var(--bs-secondary-color);
    text-align: end;
}

.form-floating > .form-control-plaintext:focus::placeholder,
.form-floating > .form-control:focus::placeholder {
    text-align: start;
}

.btn,
.form-control {
    border-radius: 0.25rem;
}

.rounded-md {
    border-radius: 0.2rem;
}

.form-control[id="productCode"] {
    border-radius: 0.15rem;
    background-color: rgb(212 212 212 / var(--tw-bg-opacity));
}

.btn-shotify-primary {
    background-color: var(--btn-primary) !important;
    border-color: var(--primary-accent) !important;
    color: var(--primary-light) !important;
    font-weight: 500;
    transition: all 0.2s ease;
}
.btn-shotify-primary:hover {
    background-color: var(--btn-hover) !important;
}

#option-container {
    display: flex;
    flex-direction: column;
    /* width: 30px; */
    gap: 0.6rem;
    background-color: rgb(0 0 0 / 1);
    border-radius: 0.375rem;
    padding: 0.25rem;
    flex: 0.5;
    align-self: flex-start;
}

#preview-container {
    flex: 6;
    background-color: #ffffff;
    padding: 15px;
    border-radius: 0.375rem;
}

.option-btn-container {
    flex-basis: 5rem;
}

.option-btn-container > button {
    height: 100%;
    width: 100%;
    color: white;
    font-size: 1.1rem;
    font-weight: 400;
    padding: 0 10px;
    background-color: rgba(0, 0, 0, 1);
    border-radius: 0.375rem;
    cursor: pointer;
}

.option-btn-container button.selected {
    background-color: white;
    color: black;
}

#search-container {
    width: 100%;
    display: flex;
    gap: 1rem;
    min-height: 600px;
}

#search-controller {
    flex: 3;
    background-color: #ffffff;
    padding: 15px;
    border-radius: 0.375rem;
}

#search-field {
    flex: 2;
}

#selectedBrand {
    transition: color 0.5s ease;
}

#selectedBrand.highlight {
    color: rgba(173, 33, 14, 0.856);
}

.preview-img {
    width: 200px;
    height: auto;
    object-fit: cover;
    margin-bottom: 0.5rem;
    border-radius: 0.25rem;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

#note-container {
    width: 100%;
}

.custom-checkbox {
    width: 20px;
    height: 20px;
    border: 1.2px solid #333;
    border-radius: 4px;
    cursor: pointer;
}

.custom-checkbox:checked {
    background-color: #055e18;
    border-color: #0056b3;
}

.drag-handle{
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    cursor:move;
}

#crop-container{
    background-color: #ffffff;
    border-radius: 5px;
    min-height: 100%;
}

#processed-preview-container{
    background-color: #ffffff;
    border-radius: 5px;
    min-height: 600px;
}
#drop-zone {
    border: 3px dashed #ced4da;
    border-radius: 10px;
    height: 150px;
    cursor: pointer;
    background-color: #f8f9fa;
    width: 80%;
    transition: background-color 0.2s, border-color 0.2s;
}

#drop-zone:hover {
    background-color: #e9ecef;
    border-color: #adb5bd;
}

#drop-zone.drag-over {
    border-color: #007bff;
    background-color: #e0f7fa;
}

.preview-area {
    min-height: 150px;
    border: 1px solid #dee2e6;
    border-radius: 5px;
    padding: 15px;
    overflow-y: auto;
}

.image-preview-item {
    display: inline-block;
    width: 100px;
    height: 100px;
    margin: 5px;
    border: 1px solid #ccc;
    border-radius: 5px;
    overflow: hidden;
    position: relative;
    text-align: center;
}

.image-preview-item img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.processed-area {
    background-color: #fff3cd;
}

